Bottom Navbar internal done

--- a/app/src/main/res/drawable/by_system.xml
+++ b/app/src/main/res/drawable/by_system.xml
@@ -7,7 +7,7 @@
       android:pathData="M5.903,13.28H8.898V20.48C8.898,22.16 9.78,22.5 10.856,21.24L18.194,12.64C19.096,11.59 18.718,10.72 17.351,10.72H14.356V3.52C14.356,1.84 13.474,1.5 12.398,2.76L5.06,11.36C4.168,12.42 4.546,13.28 5.903,13.28Z"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
-      android:fillColor="#00000000"
+      android:fillColor="#6750A4"
       android:strokeColor="#ffffff"
       android:strokeLineCap="round"/>
 </vector>
